[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-agent-framework"
version = "0.1.0"
description = "Autonomous agents orchestrating quantum computing experiments"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "quantum",
    "qiskit",
    "quantum-computing",
    "agent",
    "circuit",
    "quantum-experiment",
    "qubit",
    "gate",
    "simulation",
    "deep-tech"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = [
    "qiskit>=1.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/quantum-agent-framework"
Documentation = "https://github.com/avasis-ai/quantum-agent-framework#readme"
Repository = "https://github.com/avasis-ai/quantum-agent-framework.git"
Issues = "https://github.com/avasis-ai/quantum-agent-framework/issues"

[project.scripts]
quantum-agent = "quantum_agent_framework.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_agent_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
